--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Basketball Scoreboard</title>
 </head>
 <body>
-    
+    <img src="./images/v45_20.png" alt="" class="Scoreboard" />
 </body>
 </html>
